2001-04-30  Alex Samuel  <samuel@codesourcery.com>

	* Makefile.in (PYTHONDOCDIRS): Comment out.
	* install.py (doc_files): Add manual PDF file.
	(doc_dirs): New variable.
	Substitute @qm_doc_path2 in setup_path.py.
	Install documentation directories.
	* qm/Makefile.in (setup_path.py): Substitute @qm_doc_path@.
	* qm/setup_path.py.in (__doc_dir): New variable.
	Set QM_DOC_PATH environment variable.
	* qm/common.py (get_doc_directory): New function.
	* qm/test/web/web.py (start_server): Register manual directory.
	* qm/web.py (PageInfo.html_generator): Remove.
	(session_id_field): In show_help, open window with toolbar and
	scrollbars options.
	(PageInfo.GetProgramName): New method.
	(PageInfo.GenerateHtmlHeader): Use it.
	(make_help_link_html): Generate page from DTML.
	* share/dtml/help.dtml: New file.
	* doc/Makefile.in (SUBDIRS): Remove design doc directories.
	* doc/manual/Makefile.in (DOCBOOKMAIN): Change to manual.xml.
	* doc/manual/main.xml: Rename to...
	* doc/manual/manual.xml: ... this.

2001-04-29  Alex Samuel  <samuel@codesourcery.com>

	* qm/test/web/web.py (start_server): Register delete-test,
	delete-action, and delete-suite scripts.
	* qm/test/web/suite.py (ShowPageInfo.MakeDeleteScript): New method.
	(handle_delete): New function.
	* qm/test/web/show.py (ShowPageInfo.MakeDeleteScript): New method.
	(handle_delete): New function.
	* qm/test/xmldb.py (Database.RemoveTest): New method.
	(Database.RemoveAction): Likewise.
	(Database.RemoveSuite): Likewise.
	* qm/test/base.py (Database.RemoveTest): New method.
	(Database.RemoveSuite): Likewise.
	(Database.RemoveAction): Likewise.
	* qm/web.py (make_popup_dialog_script): New function.
	(make_confirmation_dialog_script): Likewise.
	(make_popup_page): Likewise.
	* share/web/stylesheets/qm.css (body.popup): New class.
	* share/dtml/test/show.dtml: Add Delete button.
	* share/dtml/test/suite.dtml: Likewise.

2001-04-29  Alex Samuel  <samuel@codesourcery.com>
